#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
AC_INIT(README)

VERSION=0.0.9

AM_INIT_AUTOMAKE(antargisgui,$VERSION)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_INSTALL
# Checks for libraries.
AC_CHECK_LIB(SDL,SDL_Init)
AC_CHECK_LIB(SDL_ttf,TTF_Init)
AC_CHECK_LIB(SGE,sge_FilledRect)
AC_CHECK_LIB(GLU,gluPerspective)
AC_CHECK_LIB(physfs,PHYSFS_init)
AC_CHECK_LIB(SDL_mixer,Mix_OpenAudio)

RUBY_INCLUDE_DIR=[`ruby -e "require 'rbconfig'; puts Config::CONFIG['archdir']"`]
RUBY_INSTALL_DIR=[`ruby -e "require 'rbconfig'; puts Config::CONFIG['sitearchdir']"`]


AC_SUBST(RUBY_INCLUDE_DIR)
AC_SUBST(RUBY_INSTALL_DIR)

AC_ARG_ENABLE(debug,
[  --enable-debug   compile with debug information])

if test "$debug" == "yes" ; then 
  DEBUG="-DDEBUG -O0 -g"
else
  DEBUG="-DNDEBUG -O2"
fi

AC_SUBST(DEBUG)


#INCLUDES = include
# Checks for header files.



#CXXFLAGS="$CXXFLAGS `sdl-config --cflags` -Wall -g -DUSE_RUBY"
CXXFLAGS="`sdl-config --cflags` -Wall -DUSE_RUBY $DEBUG"
LDFLAGS="$LDFLAGS `sdl-config --libs`"

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_OUTPUT([ 
Makefile \
src/Makefile \
data/Makefile \
test/Makefile ])
